near-abi/src/snapshots/near_abi__tests__deser_param.snap
---
source: near-abi/src/lib.rs
expression: expected_json_str
---
{
  "name": "foo",
  "type_schema": {
    "declaration": "Unit",
    "definitions": {
      "Unit": {
        "Struct": null
      }
    }
  }
}
