near-abi/src/snapshots/near_abi__tests__deser_struct_empty.snap
---
source: near-abi/src/lib.rs
expression: expected_json_str
---
{
  "serialization_type": "borsh",
  "type_schema": {
    "declaration": "Unit",
    "definitions": {
      "Unit": {
        "Struct": null
      }
    }
  }
}
